# powersync-mdbx

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.benchmark  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  compose.yaml  rust-toolchain.toml
crates/powersync-mdbx/: Cargo.toml
crates/powersync-mdbx/src/: auth.rs  config.rs  lib.rs  main.rs  postgres_tls.rs  server.rs
crates/powersync-mdbx/src/control_plane/: debug.rs  mod.rs  parameters.rs
crates/powersync-mdbx/src/http/: management.rs  mod.rs  sync_stream.rs
crates/powersync-mdbx/src/protocol/: messages.rs
crates/powersync-mdbx/src/replication/: mod.rs  postgres.rs  runner.rs  runtime.rs  snapshot.rs
crates/powersync-mdbx/src/replication/ingest/: accumulators.rs  batch_codec.rs  current_state.rs  decoder.rs  derive.rs  error.rs  keys.rs  lookup_state.rs  metrics.rs  mod.rs  store.rs  tail_log.rs  tests.rs
crates/powersync-mdbx/src/storage/: mod.rs  sync_edge.rs  wire_mdbx.rs
crates/powersync-mdbx/src/sync_rules/: catalog.rs  eval.rs  lowering.rs  mod.rs  model.rs  query.rs  tests.rs  yaml.rs
crates/powersync-mdbx/tests/: http_contract.rs  replication_smoke.rs  sync_rules_compat.rs  sync_rules_eval_golden.rs  sync_rules_eval_golden.snapshot  sync_rules_golden.rs  sync_rules_golden.snapshot
crates/powersync-mdbx/tests/fixtures/sync_plan/: benchmark_streams.json  benchmark_streams.sync-rules  projection_variants.sync-rules  request_binding_variants.sync-rules
crates/powersync-mdbx/tests/fixtures/sync_plan/reject/: disallowed_boolean_join_remap.sync-rules  non_public_table.sync-rules  unsupported_predicate.sync-rules  (+2 more)
(+52 files in other folders)
