[package]
name = "powersync-mdbx"
version = "0.1.0"
edition = "2021"
description = "Rust/MDBX implementation of PostgreSQL-to-PowerSync bucket replication for protocol and performance research."
readme = "../../README.md"
license = "Apache-2.0"
repository = "https://github.com/whygee-dev/powersync-mdbx"
publish = false

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
bson = "2.15.0"
bytes = "1.10.1"
futures-util = "0.3.31"
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
libmdbx = "0.6.6"
pgwire-replication = "0.3.1"
pg_walstream = "0.5.1"
tokio-postgres = "0.7.17"
tokio-postgres-rustls = { version = "0.14.0", default-features = false, features = ["ring"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = { version = "1.15.0", features = ["std"] }
webpki-roots = "1.0.4"
url = "2.5.7"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs"] }
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "rustls"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
tempfile = "3.23.0"
